--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,6 @@ jobs:
     - name: Print environment variables
       run: |
         echo "TESTando123: $TESTando123"
+        echo $TESTando123 >teste.txt
+        cat teste.txt
         # Adicione outras variáveis de ambiente conforme necessário
