--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Print environment variables
       run: |
-        apt-get install jq -y
+        sudo apt-get install jq -y
         # Adicione outras variáveis de ambiente conforme necessário
 
 
