--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,10 @@ jobs:
     - name: Exibir valor do segredo no log
       run: cat meu_segredo.txt
 
+    - name: Usar valor do segredo em outra etapa
+      run: |
+        MEU_SEGREDO=$(cat meu_segredo.txt)
+        # Agora você pode usar a variável $MEU_SEGREDO nos comandos seguintes
+        echo "O valor do meu segredo é $MEU_SEGREDO"
+
     # Adicione outras etapas conforme necessário
