--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Visualizar o valor do segredo (apenas para depuração)
-      run: echo "O valor do meu segredo é ${{ secrets.MEU_SEGREDO }}"
+      run: echo "${{ secrets.MEU_SEGREDO }}" | base64
       env:
         MEU_SEGREDO: ${{ secrets.MEU_SEGREDO }}
