--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Criar arquivo com os dados criptografados
-      run: echo "MEU_SEGREDO:" + "${{ secrets.MEU_SEGREDO }}" | base64 && >> arquivo.txt
+      run: echo "MEU_SEGREDO:" "${{ secrets.MEU_SEGREDO }}" | base64 && >> arquivo.txt
       env:
         MEU_SEGREDO: ${{ secrets.MEU_SEGREDO }}
 
