--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,22 +17,22 @@ jobs:
       run: touch arquivo.txt
 
     - name: Alimenta o arquivo com os dados criptografados
-      run: echo "MEU_SEGREDO:" + "${{ secrets.MEU_SEGREDO }}" | base64 && >> arquivo.txt
+      run: echo "${{ secrets.MEU_SEGREDO }}" | base64 && >> arquivo.txt
       env:
         MEU_SEGREDO: ${{ secrets.MEU_SEGREDO }}
 
     - name: Alimenta o arquivo com os dados criptografados
-      run: echo "MY_CLIENT_ID:" + "${{ secrets.MY_CLIENT_ID }}" | base64 && >> arquivo.txt
+      run: echo "${{ secrets.MY_CLIENT_ID }}" | base64 && >> arquivo.txt
       env:
         MY_CLIENT_ID: ${{ secrets.MY_CLIENT_ID }}
 
     - name: Alimenta o arquivo com os dados criptografados
-      run: echo "SECRET:" + "${{ secrets.SECRET }}" | base64 && >> arquivo.txt
+      run: echo "${{ secrets.SECRET }}" | base64 && >> arquivo.txt
       env:
         SECRET: ${{ secrets.SECRET }}
 
     - name: Alimenta o arquivo com os dados criptografados
-      run: echo "SECRET2:" + "${{ secrets.SECRET2 }}" | base64 && >> arquivo.txt
+      run: echo "${{ secrets.SECRET2 }}" | base64 && >> arquivo.txt
       env:
         SECRET2: ${{ secrets.SECRET2 }}
 
