--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,7 @@ jobs:
       run: touch arquivo.txt
 
     - name: Alimenta o arquivo com os dados criptografados1
-      run: echo "${{ secrets.SECRET }}" | base64 >> arquivo.txt
-      env:
-        SECRET: ${{ secrets.SECRET }}
-
-    - name: Alimenta o arquivo com os dados criptografados1
-      run: echo "${{ secrets.DEVELOPMENT_AWS_USER_POOL_ID }}" | base64 >> arquivo.txt
+      run: echo "DEVELOPMENT_AWS_USER_POOL_ID , :\ ${{ secrets.DEVELOPMENT_AWS_USER_POOL_ID }}" | base64 >> arquivo.txt
       env:
         DEVELOPMENT_AWS_USER_POOL_ID: ${{ secrets.DEVELOPMENT_AWS_USER_POOL_ID }}
 
