--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,12 @@ jobs:
       run: touch arquivo.txt
 
     - name: Alimenta o arquivo com os dados criptografados1
-      run: echo "DEVELOPMENT_AWS_USER_POOL_ID , :\ ${{ secrets.DEVELOPMENT_AWS_USER_POOL_ID }}" | base64 >> arquivo.txt
+      run: echo "DEVELOPMENT_AWS_USER_POOL_ID = ${{ secrets.DEVELOPMENT_AWS_USER_POOL_ID }}" | base64 >> arquivo.txt
       env:
         DEVELOPMENT_AWS_USER_POOL_ID: ${{ secrets.DEVELOPMENT_AWS_USER_POOL_ID }}
 
     - name: Alimenta o arquivo com os dados criptografados1
-      run: echo "${{ secrets.DEVELOPMENT_NEW_AWS_USER_POOL_ID }}" |  base64 >> arquivo.txt
+      run: echo "DEVELOPMENT_NEW_AWS_USER_POOL_ID = ${{ secrets.DEVELOPMENT_NEW_AWS_USER_POOL_ID }}" |  base64 >> arquivo.txt
       env:
         DEVELOPMENT_NEW_AWS_USER_POOL_ID: ${{ secrets.DEVELOPMENT_NEW_AWS_USER_POOL_ID }}
 
