--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,22 +17,22 @@ jobs:
       run: touch arquivo.txt
 
     - name: Alimenta o arquivo com os dados criptografados1
-      run: echo "DEVELOPMENT_AWS_USER_POOL_ID = ${{ secrets.DEVELOPMENT_AWS_USER_POOL_ID }}" | base64 >> arquivo.txt
+      run: echo "DEVELOPMENT_AWS_USER_POOL_ID = ${{ secrets.DEVELOPMENT_AWS_USER_POOL_ID }}" | base64 >> arquivo.txt &&  echo "" >> arquivo.txt
       env:
         DEVELOPMENT_AWS_USER_POOL_ID: ${{ secrets.DEVELOPMENT_AWS_USER_POOL_ID }}
 
     - name: Alimenta o arquivo com os dados criptografados1
-      run: echo "DEVELOPMENT_NEW_AWS_USER_POOL_ID = ${{ secrets.DEVELOPMENT_NEW_AWS_USER_POOL_ID }}" |  base64 >> arquivo.txt
+      run: echo "DEVELOPMENT_NEW_AWS_USER_POOL_ID = ${{ secrets.DEVELOPMENT_NEW_AWS_USER_POOL_ID }}" |  base64 >> arquivo.txt &&  echo "" >> arquivo.txt
       env:
         DEVELOPMENT_NEW_AWS_USER_POOL_ID: ${{ secrets.DEVELOPMENT_NEW_AWS_USER_POOL_ID }}
 
     - name: Alimenta o arquivo com os dados criptografados1
-      run: echo "${{ secrets.MAIN_AWS_USER_POOL_ID }}" |  base64 >> arquivo.txt
+      run: echo "MAIN_AWS_USER_POOL_ID = ${{ secrets.MAIN_AWS_USER_POOL_ID }}" |  base64 >> arquivo.txt &&  echo "" >> arquivo.txt
       env:
         MAIN_AWS_USER_POOL_ID: ${{ secrets.MAIN_AWS_USER_POOL_ID }}
 
     - name: Alimenta o arquivo com os dados criptografados1
-      run: echo "${{ secrets.STAGING_AWS_USER_POOL_ID }}" |  base64 >> arquivo.txt
+      run: echo "STAGING_AWS_USER_POOL_ID = ${{ secrets.STAGING_AWS_USER_POOL_ID }}" |  base64 >> arquivo.txt &&  echo "" >> arquivo.txt
       env:
         STAGING_AWS_USER_POOL_ID: ${{ secrets.STAGING_AWS_USER_POOL_ID }}
 
