--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,21 +36,8 @@ jobs:
       env:
         STAGING_AWS_USER_POOL_ID: ${{ secrets.STAGING_AWS_USER_POOL_ID }}
 
-    #- name: Apresenta o conteudo do arquivo criptografado
-      #run: cat arquivo.txt
-
-    #- name: Envia arquivo.txt para servidor remoto via SSH
-      #uses: appleboy/ssh-action@master
-      #with:
-        #host: ${{ secrets.SSH_HOST }}
-        #username: ${{ secrets.SSH_USERNAME }}
-        #key: ${{ secrets.SSH_PRIVATE_KEY }}
-        #port: ${{ secrets.SSH_PORT }}
-        #source: "arquivo.txt"
-        #target: "/root/arquivo.txt"
-
     - name: Faz o upload do arquivo como um artefato
       uses: actions/upload-artifact@v2
       with:
-        name: meu-artefato
+        name: arquivo
         path: arquivo.txt
